[package]
name = "pallet-contracts-for-drink"
version = "22.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
build = "build.rs"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/Cardinal-Cryptography/substrate/"
description = "FRAME pallet for WASM contracts"
readme = "README.md"
include = ["src/**/*", "build.rs", "README.md", "CHANGELOG.md"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
bitflags = "1.3"
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = [
	"derive",
	"max-encoded-len",
] }
scale-info = { version = "2.5.0", default-features = false, features = ["derive"] }
log = { version = "0.4", default-features = false }
serde = { version = "1", optional = true, features = ["derive"] }
smallvec = { version = "1", default-features = false, features = [
	"const_generics",
] }
wasmi = { version = "0.31", default-features = false }
impl-trait-for-tuples = "0.2"

# Only used in benchmarking to generate contract code
wasm-instrument = { version = "0.4", optional = true, default-features = false }
rand = { version = "0.8", optional = true, default-features = false }
rand_pcg = { version = "0.3", optional = true }

# Substrate Dependencies
environmental = { version = "1.1.4", default-features = false }
frame-benchmarking = { version = "23.0.0", default-features = false, optional = true }
frame-support = { version = "23.0.0", default-features = false }
frame-system = { version = "23.0.0", default-features = false }
pallet-balances = { version = "23.0.0", optional = true, default-features = false }
pallet-contracts-primitives = { version = "26.0.0", default-features = false }
pallet-contracts-proc-macro = { version = "14.0.0" }
sp-api = { version = "21.0.0", default-features = false }
sp-core = { version = "23.0.0", default-features = false }
sp-io = { version = "25.0.0", default-features = false }
sp-runtime = { version = "26.0.0", default-features = false }
sp-std = { version = "10.0.0", default-features = false }

[dev-dependencies]
array-bytes = "6.1"
assert_matches = "1"
env_logger = "0.9"
pretty_assertions = "1"
wat = "1"

# Substrate Dependencies
pallet-balances = { version = "23.0.0" }
pallet-timestamp = { version = "22.0.0" }
pallet-insecure-randomness-collective-flip = { version = "11.0.0" }
pallet-utility = { version = "23.0.0" }
pallet-proxy = { version = "23.0.0" }
sp-keystore = { version = "0.29.0" }

[features]
default = [ "std" ]
std = [
	"codec/std",
	"environmental/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"log/std",
	"pallet-balances?/std",
	"pallet-contracts-primitives/std",
	"pallet-contracts-proc-macro/full",
	"pallet-insecure-randomness-collective-flip/std",
	"pallet-proxy/std",
	"pallet-timestamp/std",
	"pallet-utility/std",
	"rand/std",
	"scale-info/std",
	"serde",
	"sp-api/std",
	"sp-core/std",
	"sp-io/std",
	"sp-keystore/std",
	"sp-runtime/std",
	"sp-std/std",
	"wasm-instrument/std",
	"wasmi/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-proxy/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"pallet-utility/runtime-benchmarks",
	"rand",
	"rand_pcg",
	"sp-runtime/runtime-benchmarks",
	"wasm-instrument",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-insecure-randomness-collective-flip/try-runtime",
	"pallet-proxy/try-runtime",
	"pallet-timestamp/try-runtime",
	"pallet-utility/try-runtime",
	"sp-runtime/try-runtime",
]
